# wim

./: .gitignore  Cargo.toml  README.md  settings.toml  wimrc.py  wimrc.rn
src/: bindings.rs  bitmap.rs  buf.rs  classify.rs  color.rs  command.rs  commandline.rs  consts.rs  dispatch.rs  dk.rs  doc.rs  docrange.rs  docview.rs  editor.rs  error.rs  files.rs  format.rs  glyph.rs  key.rs  keygen.rs  layout.rs  line.rs  main.rs  message.rs  mode.rs  noun.rs  plugin.rs  pos.rs  prelude.rs  propvalue.rs  raster.rs  read.rs  rel.rs  row.rs  sel.rs  settings.rs  size.rs  status.rs  target.rs  termios.rs  (+12 more)
