[package]
name = "wim"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.69"
lexical = "6.1.1"
# lexical = "6.1.1"
libc = "0.2.139"
log = "0.4.17"
quickcheck_macros = "1.0.0"
regex = "1.7.2"
signal-hook = "0.3.15"
simple-logging = "2.0.2"
stackfmt = "0.1.2"
thiserror = "1.0.39"

[dev-dependencies]
quickcheck = "1.0.3"
